2010-02-23	Chris Johns <chrisj@rtems.org>

	* libfs/src/rfs/rtems-rfs-dir.c: Fix printf format warning for a
	64bit off_t.
	
	* libfs/src/rfs/rtems-rfs-file-system.h: Add a macro to get the
	file system flags.
	
	* libfs/src/rfs/rtems-rfs-group.c,
	libfs/src/rfs/rtems-rfs-group.h: Add rtems_rfs_group_usage.
	
	* libfs/src/rfs/rtems-rfs-rtems.c: Fill in all the fields in the
	statvfs struct.
	
	* libfs/src/rfs/rtems-rfs-shell.c: Use rtems_rfs_group_usage.

2010-02-20	Chris Johns <chrisj@rtems.org>

	* libfs/src/dosfs/fat.c, libfs/src/rfs/rtems-rfs-buffer.c: Block
	devices are now block device nodes and not character device
	nodes.

2010-02-19	Chris Johns <chrisj@rtems.org>

	* libblock/src/diskdevs.c: Create the devices as block devices.

	* libmisc/shell/main_debugrfs.c, libmisc/shell/main_mkrfs.c,
	libmisc/shell/main_mount_rfs.c: New.

	* libmisc/shell/main_msdosfmt.c: Change the command to mkdos and
	alias the old name.

	* libmisc/shell/shellconfig.h, libmisc/Makefile.am: Add RFS
	support.

	* libfs/src/rfs/rtems-rfs-shell.c,
	libfs/src/rfs/rtems-rfs-shell.h: Move the format command code into
	the shell file.
	
2010-02-18	Chris Johns <chrisj@rtems.org>

	* libfs/src/rfs/rtems-rfs-bitmaps.c,
	libfs/src/rfs/rtems-rfs-bitmaps.h,
	libfs/src/rfs/rtems-rfs-bitmaps-ut.c,
	libfs/src/rfs/rtems-rfs-block.c, libfs/src/rfs/rtems-rfs-block.h,
	libfs/src/rfs/rtems-rfs-block-pos.h,
	libfs/src/rfs/rtems-rfs-buffer-bdbuf.c,
	libfs/src/rfs/rtems-rfs-buffer.c,
	libfs/src/rfs/rtems-rfs-buffer-devio.c,
	libfs/src/rfs/rtems-rfs-buffer.h, libfs/src/rfs/rtems-rfs-data.h,
	libfs/src/rfs/rtems-rfs-dir.c, libfs/src/rfs/rtems-rfs-dir.h,
	libfs/src/rfs/rtems-rfs-dir-hash.c,
	libfs/src/rfs/rtems-rfs-dir-hash.h,
	libfs/src/rfs/rtems-rfs-file.c, libfs/src/rfs/rtems-rfs-file.h,
	libfs/src/rfs/rtems-rfs-file-system.c,
	libfs/src/rfs/rtems-rfs-file-system-fwd.h,
	libfs/src/rfs/rtems-rfs-file-system.h,
	libfs/src/rfs/rtems-rfs-format.c,