@@ -170,6 +170,15 @@ rtems_shell_cmd_t rtems_shell_MSDOSFMT_Command = {
   "mkdos " OPTIONS " path # format disk",    /* usage */
   "files",                                   /* topic */
   rtems_shell_main_msdos_format,             /* command */
-  "msdosfmt",                                /* alias */
+  NULL,                                      /* alias */
+  NULL                                       /* next */
+};
+
+rtems_shell_cmd_t rtems_shell_MSDOSFMT_Alias = {
+  "msdosfmt",                                /* name */
+  NULL,                                      /* usage */
+  "files",                                   /* topic */
+  NULL,                                      /* command */
+  &rtems_shell_MSDOSFMT_Command,             /* alias */
   NULL                                       /* next */
 };
